# eos-installer

./: .flake8  .gitignore  .gitmodules  Makefile.am  README.md  UNATTENDED.md  autogen.sh  configure.ac  eos-installer.doap  jenkins-pr  meson.build
.tx/: config
buildutil/: glib-tap.mk
data/: 20-gnome-initial-setup.rules  Makefile.am  com.endlessm.TestMode.policy.in  gnome-welcome-tour  gnome-welcome-tour.desktop.in.in  gnome-welcome-tour.in  initial-setup.json  product_serial.conf
debian/: changelog  control  control.in  copyright  eos-installer-standalone.install  eos-installer-standalone.prerm  eos-installer.install  install  postinst  postrm  preinst  prerm  rules  watch
eos-installer-data/: 20-eos-installer.rules  90-eos-installer.rules  Makefile.am  com.endlessm.Installer.desktop.in.in  eos-installer.desktop.in.in  eos-installer.session  meson.build  run-mount-eosimages.mount
ext/: Makefile.am
gnome-image-installer/: Makefile.am  gnome-image-installer.c  gnome-image-installer.h  liveinstaller-partition-helper.c  meson.build
gnome-image-installer/pages/: Makefile.am  meson.build
gnome-image-installer/pages/confirm/: Makefile.am  confirm.gresource.xml  gis-confirm-page.c  gis-confirm-page.h  gis-confirm-page.ui  meson.build
gnome-image-installer/pages/diskimage/: Makefile.am  diskimage.gresource.xml  gis-diskimage-page.c  gis-diskimage-page.h  gis-diskimage-page.ui  meson.build
gnome-image-installer/pages/disktarget/: Makefile.am  disktarget.gresource.xml  gis-disktarget-page.c  gis-disktarget-page.h  gis-disktarget-page.ui  meson.build
gnome-image-installer/pages/finished/: Makefile.am  finished.gresource.xml  gis-finished-page.c  gis-finished-page.h  gis-finished-page.ui  meson.build
gnome-image-installer/pages/install/: Makefile.am  gis-install-page.c  gis-install-page.h  gis-install-page.ui  gis-scribe.c  gis-scribe.h  install.gresource.xml  meson.build
gnome-image-installer/util/: Makefile.am  crc32.c  crc32.h  eos-reformatter.c  eos-reformatter.h  gduestimator.h  gduxzdecompressor.h  gis-dmi.c  gis-dmi.h  gis-errors.c  gis-errors.h  gis-store.c  gis-store.h  gis-unattended-config.c  gis-unattended-config.h  gis-write-diagnostics.c  gis-write-diagnostics.h  gpt.c  gpt.h  gpt_errors.h  gpt_gz.c  gpt_gz.h  gpt_lzma.c  gpt_lzma.h  meson.build  run-reformatter.c
gnome-initial-setup/: Makefile.am  gis-assistant.c  gis-assistant.h  gis-assistant.ui  gis-driver-mode.c  gis-driver-mode.h  gis-driver.c  gis-driver.h  gis-page.c  gis-page.h  gis-window.c  gis-window.h  gnome-initial-setup-copy-worker.c  gnome-initial-setup.c  gnome-initial-setup.h  meson.build
gnome-initial-setup/pages/: Makefile.am
gnome-initial-setup/pages/account/: gis-account-page.c  gis-account-page.ui  um-utils.c
gnome-initial-setup/pages/display/: .gitignore  Makefile.am  display.gresource.xml  gis-display-page.c  gis-display-page.h  gis-display-page.ui
gnome-initial-setup/pages/endless-eula/: Makefile.am  endless-eula-page.css  endless-eula.gresource.xml  gis-endless-eula-page.c  gis-endless-eula-page.h  gis-endless-eula-page.ui
gnome-initial-setup/pages/goa/: gis-goa-page.c
gnome-initial-setup/pages/keyboard/: Makefile.am  cc-input-chooser.c  cc-key-row.c  cc-key-row.h  cc-keyboard-detector.c  cc-keyboard-detector.h  cc-keyboard-query.c  cc-keyboard-query.h  gis-keyboard-page.c  gis-keyboard-page.ui  input-chooser.ui  keyboard-detector.ui  keyboard.gresource.xml
gnome-initial-setup/pages/keyboard/detector-trees/C/: pc105.tree
gnome-initial-setup/pages/keyboard/detector-trees/pt/: pc105.tree
gnome-initial-setup/pages/language/: Makefile.am  cc-common-language.c  cc-language-chooser.c  eos-test-mode  gis-language-page.c  gis-language-page.h  gis-language-page.ui
gnome-initial-setup/pages/location/: Makefile.am  cc-timezone-monitor.c  cc-timezone-monitor.h  gis-location-page.c  gis-location-page.ui  weather-tz.c
gnome-initial-setup/pages/network/: gis-network-page.c  gis-network-page.ui
gnome-initial-setup/pages/summary/: Makefile.am  com.endlessm.FBE.xml  com.endlessm.Tutorial.FBERemote.xml  gis-summary-page.c  gis-summary-page.ui
keyboard-detector/: keyboard_detector.py  keyboard_query.py  keyboard_test.py
player/: player.c
po/: LINGUAS  Makevars  POTFILES.in  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  eos-installer.pot  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fr.po  fur.po  fy.po  (+84 more)
tests/: Makefile.am  bad.sha256  cut-off-my-toes  invalid-1.sha256  invalid-2.sha256  make-fake-image  meson.build  public.asc  secret.asc  sign-file  test-dmi.c  test-error-input-stream.c  test-error-input-stream.h  test-scribe.c  test-unattended-config.c  test-write-diagnostics.c  wjt.asc
tests/unattended/: blank-block-device.ini  full-block-device-path.ini  full.ini  missing-block-device.ini  missing-filename.ini  missing-product.ini  missing-vendor.ini  non-utf8-locale.ini  two-images.ini
